force-app/main/default/objects/CommercientSF__InvWarehouse__c/CommercientSF__InvWarehouse__c.object-meta.xml
<CustomObject>
    <label>Syspro Inventory Warehouse</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Inventory Warehouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>