force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__AgedQty3__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AgedQty3__c</fullName>
    <label>Aged quantity on hand</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>