force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__CostMultiplier__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CostMultiplier__c</fullName>
    <label>Landed cost multiplier</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>