force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__DateLastCostChange__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DateLastCostChange__c</fullName>
    <label>Date last cost change</label>
    <type>DateTime</type>
</CustomField>