force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__DateLastPurchase__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DateLastPurchase__c</fullName>
    <label>Date of last purchase</label>
    <type>DateTime</type>
</CustomField>