force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__DateLastStockCnt__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DateLastStockCnt__c</fullName>
    <label>Date of last stock count</label>
    <type>DateTime</type>
</CustomField>