force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__DateLastStockMove__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DateLastStockMove__c</fullName>
    <label>Date last stock movement</label>
    <type>DateTime</type>
</CustomField>