force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__DateWhAdded__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DateWhAdded__c</fullName>
    <label>Date warehouse added</label>
    <type>DateTime</type>
</CustomField>