force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__DefaultBin__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DefaultBin__c</fullName>
    <label>Default bin location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>