force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__DefaultSourceWh__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DefaultSourceWh__c</fullName>
    <label>Default source warehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>