force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__ExcludeFromSched__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ExcludeFromSched__c</fullName>
    <label>Exclude from scheduling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>