force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__ExternalKeys__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ExternalKeys__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ExternalKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>