force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__FixedOverhead__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FixedOverhead__c</fullName>
    <label>Fixed overhead</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>