force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__ImplosionNum__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ImplosionNum__c</fullName>
    <label>Implosion control number</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>