force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__LastCostEntered__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LastCostEntered__c</fullName>
    <label>Last cost entered</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>