force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__LastExtendedCost__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LastExtendedCost__c</fullName>
    <label>Last extended cost entered</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>