force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__LeadTime__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LeadTime__c</fullName>
    <label>Lead time in days</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>