force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__MajorOrderMult__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MajorOrderMult__c</fullName>
    <label>Major order multiple</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>