force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__MaximumQty__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MaximumQty__c</fullName>
    <label>Maximum qty</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>