force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__MinimumQty__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MinimumQty__c</fullName>
    <label>Minimum qty</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>