force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__MinorOrderMult__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MinorOrderMult__c</fullName>
    <label>Minor order multiple</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>