force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__MtdQtyAdjusted__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MtdQtyAdjusted__c</fullName>
    <label>MTD qty adjusted</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>