force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__MtdQtyIssued__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MtdQtyIssued__c</fullName>
    <label>MTD qty issued</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>