force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__MtdQtyReceived__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MtdQtyReceived__c</fullName>
    <label>MTD qty received</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>