force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__MtdQtySold__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MtdQtySold__c</fullName>
    <label>MTD qty sold</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>