force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__MtdSalesValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MtdSalesValue__c</fullName>
    <label>Month to date sales value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>