force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__NumMonthsHistory__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NumMonthsHistory__c</fullName>
    <label>Number of months history</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>