force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__OpenBalCost1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OpenBalCost1__c</fullName>
    <label>Unit cost at opening bal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>