force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__OpenBalQty2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OpenBalQty2__c</fullName>
    <label>Opening bal for prev 12 months</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>