force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__OpeningBalance__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OpeningBalance__c</fullName>
    <label>Opening stock balance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>