force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__OrderFixPeriod__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrderFixPeriod__c</fullName>
    <label>Fixed time period</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>