force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__OrderMinimum__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrderMinimum__c</fullName>
    <label>Minimum order quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>