force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__OrderPolicy__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrderPolicy__c</fullName>
    <label>Order policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>