force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__PalletQty__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PalletQty__c</fullName>
    <label>Pallet quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>