force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__PrevYtdSalesVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PrevYtdSalesVal__c</fullName>
    <label>Prev year to date sls value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>