force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__Product__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Syspro_InvWarehouses</relationshipName>
    <type>Lookup</type>
</CustomField>