force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__QtyAllocated__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__QtyAllocated__c</fullName>
    <label>Qty allocated</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>