force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__QtyAllocatedWip__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__QtyAllocatedWip__c</fullName>
    <label>Allocated WIP quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>