force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__QtyDispatched__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__QtyDispatched__c</fullName>
    <label>Quantity dispatch not invoiced</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>