force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__QtyInInspection__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__QtyInInspection__c</fullName>
    <label>Quantity in inspection</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>