force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__QtyInTransit__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__QtyInTransit__c</fullName>
    <label>Qty in transit to be received</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>