force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__QtyOnHand__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__QtyOnHand__c</fullName>
    <label>Qty on hand</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>