force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__QtyOnOrder__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__QtyOnOrder__c</fullName>
    <label>Qty on order</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>