force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__QtyWipReserved__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__QtyWipReserved__c</fullName>
    <label>Quantity reserved by jobs</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>