force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__ReOrderQty__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ReOrderQty__c</fullName>
    <label>Re-order quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>