force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__RequisitionFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RequisitionFlag__c</fullName>
    <label>Requisitions in progress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>