force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__RmaQtyIssued__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RmaQtyIssued__c</fullName>
    <label>RMA issued quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>