force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__SafetyStockQty__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SafetyStockQty__c</fullName>
    <label>Safety stock level</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>