force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__SalesQty1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesQty1__c</fullName>
    <label>Sales/issue quantity bucket</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>