force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__StdLabCostsBill__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StdLabCostsBill__c</fullName>
    <label>Labor costs in multi-bill</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>