force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__Supplier__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Supplier__c</fullName>
    <label>Supplier to use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>