force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__TransferValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TransferValue__c</fullName>
    <label>Total transfer value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>