force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__TrfBuyingRule__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrfBuyingRule__c</fullName>
    <label>Replenishment rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>