force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__TrfCostGlCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrfCostGlCode__c</fullName>
    <label>Transfer cost G/L code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>