force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__TrfCostMultiply__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrfCostMultiply__c</fullName>
    <label>Transfer cost multiplier</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>