force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__TrfDockToStock__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrfDockToStock__c</fullName>
    <label>Dock to stock in days</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>