force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__TrfFixTimePeriod__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrfFixTimePeriod__c</fullName>
    <label>Fixed time days for rule C</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>