force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__TrfLeadTime__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrfLeadTime__c</fullName>
    <label>Transfer lead time</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>