force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__TrfReplenishWh__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrfReplenishWh__c</fullName>
    <label>Use replenishment details</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>