force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__TrfSuppliedItem__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrfSuppliedItem__c</fullName>
    <label>Transfer supplied item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>