force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__UnitCost__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__UnitCost__c</fullName>
    <label>Current inventory unit cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>