force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__VariableOverhead__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__VariableOverhead__c</fullName>
    <label>Variable overhead</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>