force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__Warehouse__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Warehouse__c</fullName>
    <label>Warehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>