force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__YtdQtyIssued__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__YtdQtyIssued__c</fullName>
    <label>YTD qty issued</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>