force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__YtdQtySold__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__YtdQtySold__c</fullName>
    <label>YTD qty sold</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>