force-app/main/default/objects/CommercientSF__InvWarehouse__c/fields/CommercientSF__YtdUsageValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__YtdUsageValue__c</fullName>
    <label>YTD usage value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>